spade-tests/src/snapshots/spade_tests__typeinference__reset_must_be_of_type_bool.snap
---
source: spade-tests/src/typeinference.rs
assertion_line: 586
---
entity test(clk: clock, b: int<4>) -> int<8> {
    reg(clk) a reset (b: 0) = 3;
    a
}


error: Register reset must be a bool
  ┌─ testinput:2:23
  │
2 │     reg(clk) a reset (b: 0) = 3;
  │                       ^ Found type int<4>
  │
  = Expected: bool
  =      Got: int<4>


